--- a/frontend/src/assets/styles/Rooms.css
+++ b/frontend/src/assets/styles/Rooms.css
@@ -58,5 +58,6 @@
 }
 
 .roomCard{
+    margin-inline: 10px;
     max-width: 350px;
 }
